# auth-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  openapi.yaml
crates/admin/: Cargo.toml  config.toml  config.toml.example
crates/admin/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: auth.rs  config.rs  main.rs  routes.rs  utils.rs
crates/database/: Cargo.toml
crates/database/src/: domains.rs  lib.rs
crates/database/src/auth/: query.rs
crates/database/src/chains/: mod.rs  model.rs  query.rs
crates/database/src/domains/: mod.rs  model.rs  query.rs
src/: auth.rs  config.rs  main.rs  routes.rs
src/database/: domains.rs  mod.rs  model.rs  query.rs
src/database/auth/: mod.rs  model.rs
src/database/chains/: query.rs
