[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "^4", features = ["openssl"] }
actix-web-grants = "^3"
anyhow = "1.0.70"
async-trait = "^0.1"
clap = { version = "^4.2.5", features = ["derive", "env"] }
dotenvy = "0.15.7"
ethers = { version = "^2.0", features = ["rustls", "ws"]}
mongodb = "2.6.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = "^1.21.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "registry"] }
tracing-actix-web = "0.7.6"
uuid = "1.4.1"
url = "^2.3.1"

awc = { version = "^3", features = ["openssl"] }
base64 = "0.21.2"
chrono = "0.4.26"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
mime = "0.3.17"
regex = "1.9.3"
secrecy = "0.8.0"
siwe = "0.6.0"