[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "^4", features = ["openssl"] }
chrono = "0.4.26"
clap = { version = "^4.2.5", features = ["derive", "env"] }
dotenvy = "0.15.7"
ethers = { version = "^2.0", features = ["rustls", "ws"]}
futures = "0.3.28"
http = "1.0.0"
jsonwebtoken = "8.3.0"
mime = "0.3.17"
mongodb = "2.6.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
siwe = { version = "0.6.0", features = ["ethers"] }
tokio = "^1.21.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "registry"] }
tracing-actix-web = "0.7.6"
uuid = "1.4.1"
url = "^2.3.1"


