[workspace]
members = ["crates/api", "crates/admin", "crates/database"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

[workspace.dependencies]
database = { path = "crates/database" }

clap = { version = "^4.2.5", features = ["derive", "env"] }
dotenvy = "0.15.7"
ethers = { version = "^2.0", features = ["rustls", "ws"]}
http = "1.0.0"
mongodb = "2.6.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = "^1.21.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "registry"] }

